Fixed social icon hover, centering, and spacing

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -14,6 +14,7 @@
 
 body {
   font-family: Avenir, 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  overflow-x: hidden;
 }
 
 *:hover {
@@ -574,21 +575,6 @@ a.san-mateo:hover{
 Social Links
 =======================================================================*/
 
-.form-inline #medium-icon-header {
-  margin: 0px 0px 0px 5px;
-  font-size: 2.6em;
-}
-
-#medium-icon-header:hover {
-  color: #FFFF66;
-  -webkit-transform:scale(1.1);
-  -moz-transform:scale(1.1);
-  -o-transform:scale(1.1);
-  -webkit-transition-duration: 0.5s;
-  -moz-transition-duration: 0.5s;
-  -o-transition-duration: 0.5s;
-}
-
 #social:hover {
   -webkit-transform:scale(1.1);
   -moz-transform:scale(1.1);
@@ -607,6 +593,7 @@ Social Links
 .social-tw:hover { color: #00aced; }
 .social-ig:hover { color: #517fa4; }
 .social-em:hover { color: #dd4b39; }
+.social-me:hover { color: #ffff66; }
 
 .social-block {
   position: absolute;
@@ -615,6 +602,7 @@ Social Links
   display: inline-block;
   width: 50px;
   margin-top: 3em;
+  text-align: center;
 }
 
 .fa-3x {
@@ -626,16 +614,10 @@ Social Links
 }
 
 .fa {
+  display: block;
   box-sizing:content-box;
   font-size: 2em;
   margin-top: 0.5em;
-}
-
-.fa-medium {
-  font-size: 1.5em;
-  margin-top: 0.7em;
-  color: white;
-  display: block;
 }
 
 .fa-facebook:hover {
